--- a/test-output/index.html
+++ b/test-output/index.html
@@ -163,6 +163,9 @@
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+  &lt;listeners&gt;
+    &lt;listener class-name=&quot;utility.ExtentReportManager&quot;/&gt;
+  &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;testcases.TC002_LoginTest&quot;/&gt;
@@ -210,16 +213,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'AccountVerification')
 data.setCell(0, 2, 'testcases.TC001_AccountRegistrationTest')
-data.setCell(0, 3, 3748);
+data.setCell(0, 3, 4140);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'verifylogin')
 data.setCell(1, 2, 'testcases.TC002_LoginTest')
-data.setCell(1, 3, 1112);
+data.setCell(1, 3, 1163);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -252,18 +255,18 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">verifylogin</span>
-                <span class="method-start">2104 ms</span>
+                <span class="method-start">1775 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">testcases.TC001_AccountRegistrationTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup</span>
-                <span class="method-start">3226 ms</span>
+                <span class="method-start">2956 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">AccountVerification</span>
-                <span class="method-start">4509 ms</span>
+                <span class="method-start">4333 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
